
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "clipboard"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64       = "0.22.1"
clipboard-rs = "0.3.0"
napi         = { version = "3.0.0", features = ["async"] }
napi-derive  = "3.0.0"
tokio        = { version = "1.0", features = ["rt", "rt-multi-thread"] }

# 仅在 Linux 平台上引入 wayland-clipboard-listener
[target.'cfg(target_os = "linux")'.dependencies]
wayland-clipboard-listener = "0.3.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"

[patch.crates-io]
clipboard-rs = { path = "vendor/clipboard-rs" }
